--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,13 @@ jobs:
     - name: Build the project
       run: npm run build
 
+    - name: List build directory for debugging
+      run: ls -al ./dist
+
     - name: Deploy to master-build branch
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add -f build
+        git add -f dist
         git commit -m "Deploy build to master-build branch"
-        git push origin `git subtree split --prefix build master`:master-build --force
+        git push origin `git subtree split --prefix dist master`:master-build --force
