--- a/.refsrc.json
+++ b/.refsrc.json
@@ -11,7 +11,7 @@
     "label": "编辑"
   },
   "github": {
-    "url": "https://github.com/jaywcjlove/reference"
+    "url": "https://github.com/MeyerZhao/reference"
   },
   "giscus": {
     "src": "https://giscus.app/client.js",
